Add set a metadata track value for a sample
